--- a/package.json
+++ b/package.json
@@ -29,5 +29,15 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "write-file-webpack-plugin": "^4.5.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry"
+        }
+      ]
+    ]
   }
 }
