--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "jquery": "^3.3.1",
     "ol": "5.3.0",
     "ol-rotate-feature": "^2.0.1",
-    "ole": "0.0.1",
     "proj4": "^2.5.0",
     "whatwg-fetch": "^3.0.0"
   },
@@ -25,6 +24,9 @@
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
