--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
