--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ol": "5.3.0",
     "ol-rotate-feature": "^2.0.1",
     "proj4": "^2.5.0",
@@ -28,10 +28,11 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "file-loader": "^5.0.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.9.0",
     "write-file-webpack-plugin": "^4.5.0"
   },
   "babel": {
